[gd_scene load_steps=2 format=2]

[ext_resource path="res://InstructionGraph/NumberNode.gd" type="Script" id=1]

[node name="GraphNode" type="GraphNode"]
margin_left = -1.0
margin_right = 163.0
margin_bottom = 60.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 148.0
margin_bottom = 48.0

[node name="NameEdit" type="LineEdit" parent="HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
text = "num"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 62.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "="

[node name="ValueEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 74.0
margin_right = 132.0
margin_bottom = 24.0
text = "0"
[connection signal="text_changed" from="HBoxContainer/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="focus_exited" from="HBoxContainer/ValueEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/ValueEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="HBoxContainer/ValueEdit" to="." method="_on_LineEdit_text_entered"]
